<internal>: fixed results-card behavior in advanced-search
now the card won't become too long just because of the list of clinics available

--- a/webapp/src/main/webapp/resources/css/advanced-search-clinic.css
+++ b/webapp/src/main/webapp/resources/css/advanced-search-clinic.css
@@ -86,6 +86,7 @@ body {
 }
 .result-section {
     width: 20em;
+    max-height: 32em;
 }
 .data-section {
     width: 30em;
